# curex-healthcare-ai

./: .env.example  .gitignore  HEALTHCARE_RAG_AGENT_PLAN.md  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  auth.py  mcp_server.py  review.py
backend/agent/: graph.py  memory.py  router.py  tools.py
backend/api/: __init__.py  main.py
backend/evaluation/: __init__.py  golden_dataset.json  ragas_runner.py
backend/generation/: __init__.py  faithfulness.py  prompts.py  safety.py
backend/ingestion/: chunker.py  indexer.py  loaders.py
backend/retrieval/: hybrid.py  hyde.py  reranker.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatInput.jsx  ChatMessage.jsx  CitationCard.jsx  CitationChip.jsx  Sidebar.jsx
tests/: test_api.py  test_chunker.py  test_faithfulness.py  test_golden_dataset.py  test_graph.py  test_hybrid.py  test_hyde.py  test_indexer.py  test_loaders.py  test_mcp_server.py  test_memory.py  test_model_config.py  test_observability.py  test_prompts.py  test_ragas_runner.py  test_reranker.py  test_review.py  test_router.py  test_safety.py  test_safety_red_team.py  test_tools.py
