[project]
name = "healthcare-rag"
version = "0.1.0"
description = "Agentic healthcare RAG assistant with ingestion, hybrid retrieval, safety guardrails, and evaluation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.2",
    "langgraph>=0.1",
    "langchain-google-genai",
    "numpy<2",
    "pgvector",
    "psycopg2-binary",
    "scispacy",
    "rank_bm25",
    "sentence-transformers",
    "tenacity",
    "pdfplumber",
    "biopython",
    "ragas",
    "langsmith",
    "fastapi",
    "python-multipart",
    "uvicorn[standard]",
    "redis",
    "pydantic>=2",
    "rich",
    "graphviz",
    "mcp>=1.27.1",
    "PyJWT>=2.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
healthcare-mcp-server = "backend.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
